overflow hidden fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -87,7 +87,7 @@ button {
 
 html,
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -237,7 +237,7 @@ legend {
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin: -2.55rem 0 0 2.85rem;
+  margin: -2.35rem 0 0 2.85rem;
   padding: 10rem 4rem 4rem;
   position: absolute;
   transform-origin: 0% 0%;
